--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -22,6 +22,7 @@ $color-available-fade: rgba(22, 163, 74, 0.4);
 
 $color-accent: #e8482b;
 $color-accent-dark: #e8482b;
+$color-accent-dark-text: #ea5540;
 $color-accent-fade: rgba(232, 72, 43, 0.1);
 $color-accent-glow: rgba(232, 72, 43, 0.35);
 $color-accent-text: #c93516;
@@ -33,10 +34,11 @@ $color-bg-dark-2: #1a1a1a;
 
 $color-text-primary: #141414;
 $color-text-secondary: #57574f;
-$color-text-muted: #8a8a82;
+$color-text-muted: #71716a;
 
 $color-text-dark-primary: #f4f4f0;
 $color-text-dark-secondary: #a5a59d;
+$color-text-dark-muted: #8a8a82;
 
 $color-border-light: #e5e5e2;
 $color-border-dark: #2a2a26;
